wrong path in gitmodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,5 @@
-[submodule "external/linalg"]
-	path = external/linalg
+[submodule "ext/linalg"]
+	path = ext/linalg
 	url = https://github.com/sgorsten/linalg.git
 	branch = master
 
-[submodule "external/loguru"]
-	path = external/loguru
-	url = https://github.com/emilk/loguru.git
-	branch = master
